sumo/tests/sumo/extended/emitter/errors/testsuite.sumo
# tests for errors in route distribution
routedist

# tests for errors in vtype distribution
vtypedist



# Wrong XML
xml

